[package]
name = "maia-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shakmaty = "0.30.0"
thiserror = "2.0.18"

[dev-dependencies]
reqwest = "0.13.2"
